--- a/stream-chat-android-client/build.gradle
+++ b/stream-chat-android-client/build.gradle
@@ -113,6 +113,7 @@ dependencies {
     testImplementation Dependencies.mockitoKotlin
     testImplementation Dependencies.okhttpMockWebserver
     testImplementation Dependencies.robolectric
+    testImplementation Dependencies.truth
 
     // Instrumentation tests
     androidTestImplementation Dependencies.assertj
