--- a/scripts/publish-mavencentral.gradle
+++ b/scripts/publish-mavencentral.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
-apply plugin: 'org.jetbrains.dokka'
 
 task androidSourcesJar(type: Jar) {
     archiveClassifier.set('sources')
@@ -13,15 +12,8 @@ task androidSourcesJar(type: Jar) {
     }
 }
 
-tasks.withType(dokkaHtmlPartial.getClass()).configureEach {
-    pluginsMapConfiguration.set(
-            ["org.jetbrains.dokka.base.DokkaBase": """{ "separateInheritedMembers": true}"""]
-    )
-}
-
-task javadocJar(type: Jar, dependsOn: dokkaJavadoc) {
+task javadocJar(type: Jar) {
     archiveClassifier.set('javadoc')
-    from dokkaJavadoc.outputDirectory
 }
 
 artifacts {
