First iteration over our PoC of Single Source of Truth

--- a/stream-chat-android-ui-components/build.gradle
+++ b/stream-chat-android-ui-components/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     implementation Dependencies.coilGif
     implementation Dependencies.coilVideo
     implementation Dependencies.androidxStartup
+    implementation Dependencies.androidxLifecycleLiveDataKtx
 
     // Tests
     testImplementation project(":stream-chat-android-test")
